--- a/index2.html
+++ b/index2.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfólio  | JohnnyPontes</title>
+    <title>Portfólio  | Front</title>
     
     <link rel="stylesheet" href="style.css">
 </head>
@@ -18,8 +18,9 @@
             <ul class="menu">
                 <li><a href="#home">Inicio</a></li>
                 <li><a href="#about">Sobre</a></li>
+                <li><a href="#services">Serviços</a></li>
                 <li><a href="#skills">Especialidade</a></li>
-                <li><a href="#services">Projetos</a></li>
+                <li><a href="#teams">Equipe</a></li>
                 <li><a href="#contact">Contato</a></li>
             </ul>
             <div class="menu-btn">
@@ -33,9 +34,9 @@
         <div class="max-width">
             <div class="home-content">
                 <div class="text-1">Ola, meu nome é</div>
-                <div class="text-2">Johnny Pontes</div>
+                <div class="text-2">Ricardo Ferreira</div>
                 <div class="text-3">eu sou <span class="typing"></span></div>
-                <a href="#contact">Contate-me</a>
+                <a href="#">Contratar-me</a>
             </div>
         </div>
     </section>
@@ -46,14 +47,45 @@
             <h2 class="title">Sobre</h2>
             <div class="about-content">
                 <div class="column left">
-                    <img src="image/img-1.jpg" alt="t">
+                    <img src="image/img-1.jpg" alt="">
                 </div>
                 <div class="column right">
-                    <div class="text">Meu nome é Johnny e sou <span class="typing-2"></span></div>
-                    <p>Sou um estudante de Engenharia de Software na Universidade Unicesumar, apaixonado por programação e tecnologia. Tenho conhecimentos em lógica de programação, HTML5, CSS3, Bancos de dados, Git e metodologias ágeis.
-                        Estou sempre buscando aprender e aprimorar minhas habilidades para me tornar um desenvolvedor de software qualificado.</p>
-                    <a href="#">Página Inicial</a>
+                    <div class="text">Sou Ricardo e sou <span class="typing-2"></span></div>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Porro doloribus minus eum sed ex. Pariatur voluptate fugit officia nobis nemo nihil reiciendis, similique quas ut tempore adipisci debitis corrupti rerum molestiae placeat excepturi blanditiis assumenda quis suscipit! Vel facilis maiores doloremque perferendis inventore tempore molestiae, sit ipsa blanditiis animi nostrum qui, atque architecto voluptatum cum cupiditate aliquid eius voluptatem id!</p>
+                    <a href="#">Download CV</a>
                 </div>
+            </div>
+        </div>
+    </section>
+
+     <!--sessão serviços-->
+     <section class="services" id="services">
+        <div class="max-width">
+            <h2 class="title">Serviços</h2>
+            <div class="serv-content">
+               <div class="card">
+                   <div class="box">
+                    <ion-icon name="brush-outline"></ion-icon>
+                    <div class="text">Web Design</div>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam, optio. Rerum est atque obcaecati aperiam!</p>
+                   </div>
+               </div>
+
+               <div class="card">
+                <div class="box">
+                    <ion-icon name="trending-up-outline"></ion-icon>
+                 <div class="text">Anúncios</div>
+                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam, optio. Rerum est atque obcaecati aperiam!</p>
+                </div>
+            </div>
+
+            <div class="card">
+                <div class="box">
+                    <ion-icon name="code-outline"></ion-icon>
+                 <div class="text">Design de Apps</div>
+                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam, optio. Rerum est atque obcaecati aperiam!</p>
+                </div>
+            </div>
             </div>
         </div>
     </section>
@@ -65,30 +97,7 @@
             <div class="skills-content">
                 <div class="column left">
                     <div class="text">Minhas habilidades criativas e experiencias</div>
-                    <p>1. Lógica de Programação: <br><br>
-
-                        Entendimento dos conceitos fundamentais de programação, como estruturas de controle, loops, funções e estrutura de dados.
-                        Capacidade de resolver problemas de programação de forma eficiente e eficaz.
-                        Experiência em linguagens de programação como JavaScript, Java e C#. <br><br>
-                        2. HTML5 e CSS3: <br><br>
-
-                        Desenvolvimento de páginas web estáticas e responsivas usando as últimas práticas e padrões HTML5 e CSS3.
-                        Conhecimento de semântica HTML e boas práticas de acessibilidade.
-                        Familiaridade com frameworks e bibliotecas populares, como Bootstrap e Foundation. <br><br>
-                        3. Banco de Dados: <br><br>
-
-                        Conhecimento de bancos de dados relacionais, como MySQL e PostgreSQL.
-                        Capacidade de projetar e criar esquemas de banco de dados eficientes.
-                        Experiência em escrever consultas SQL para recuperar, inserir, atualizar e excluir dados. <br><br>
-                        4. Git: <br><br>
-
-                        Familiaridade com controle de versão usando o Git.
-                        Habilidade de criar repositórios, ramos, mesclar alterações e lidar com conflitos.
-                        Experiência em colaboração em equipe usando plataformas de hospedagem de código, como o GitHub. <br><br>
-                        5. Metodologias Ágeis: <br><br>
-
-                        Conhecimento das metodologias ágeis, como Scrum e Kanban.
-                        Experiência em trabalhar em equipes ágeis, participando de reuniões diárias, planejamento de sprint e retrospectivas.</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod assumenda consequatur facere eius distinctio deleniti reiciendis aliquam architecto suscipit, at, dolores dicta sed adipisci laborum, totam dolorum enim maxime aliquid eos. Ullam, et maiores porro voluptatum explicabo deleniti sint rem quam! Delectus iste ut hic, molestias adipisci totam ipsum reiciendis quam voluptatem nisi cumque saepe ea cupiditate. Vel, quae est!</p>
                     <a href="#">Mais informações</a>
                 </div>
                 <div class="column right">
@@ -132,35 +141,47 @@
         </div>
     </section>
 
-    <!--sessão projetos-->
-    <section class="services" id="services">
+     <!--sessão equipe-->
+     <section class="teams" id="teams">
         <div class="max-width">
-            <h2 class="title">Meus Projetos</h2>
-            <div class="serv-content">
+            <h2 class="title">Minha Equipe</h2>
+           <div class="carousel owl-carousel ">
                <div class="card">
                    <div class="box">
-                    <ion-icon name="brush-outline"></ion-icon>
-                    <div class="text">Projeto 1</div>
-                    <p>Em desenvovimento...Aguarde novidades.</p>
+                       <img src="image/img-1.jpg" alt="">
+                       <div class="text">Gustavo</div>
+                       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione voluptatibus beatae iste aliquid laborum nobis.</p>
                    </div>
                </div>
-
                <div class="card">
                 <div class="box">
-                    <ion-icon name="trending-up-outline"></ion-icon>
-                 <div class="text">Projeto 2</div>
-                 <p>Em desenvovimento...Aguarde novidades.</p>
+                    <img src="image/img-2.jpg" alt="">
+                    <div class="text">Fernando</div>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione voluptatibus beatae iste aliquid laborum nobis.</p>
                 </div>
             </div>
-
             <div class="card">
                 <div class="box">
-                    <ion-icon name="code-outline"></ion-icon>
-                 <div class="text">Projeto 3</div>
-                 <p>Em desenvovimento...Aguarde novidades.</p>
+                    <img src="image/img-3.jpg" alt="">
+                    <div class="text">Mariana</div>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione voluptatibus beatae iste aliquid laborum nobis.</p>
                 </div>
             </div>
+            <div class="card">
+                <div class="box">
+                    <img src="image/img-4.jpg" alt="">
+                    <div class="text">Fabiana</div>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione voluptatibus beatae iste aliquid laborum nobis.</p>
+                </div>
             </div>
+            <div class="card">
+                <div class="box">
+                    <img src="image/img-5.jpg" alt="">
+                    <div class="text">Sueli</div>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione voluptatibus beatae iste aliquid laborum nobis.</p>
+                </div>
+            </div>
+           </div>
         </div>
     </section>
 
@@ -171,28 +192,28 @@
             <div class="contact-content">
                <div class="column left">
                    <div class="text">Fale Conosco</div>
-                   <p>.</p>
+                   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas impedit laudantium saepe, voluptate libero fugiat in, dolores voluptatem distinctio animi et iusto, amet possimus tenetur modi cupiditate. Odio, numquam fuga perferendis vitae ullam eum, ipsam tempora unde nisi optio vero recusandae ipsa asperiores rem, labore impedit laudantium officiis maiores natus.</p>
                
                <div class="icons">
                    <div class="row">
                         <ion-icon name="person-outline"></ion-icon>
                         <div class="info">
                             <div class="head">Nome</div>
-                            <div class="sub-title">Johnny C Pontes</div>
+                            <div class="sub-title">Ricardo Ferreira</div>
                         </div>
                    </div>
                    <div class="row">
                     <ion-icon name="earth-outline"></ion-icon>
                     <div class="info">
                         <div class="head">Endereço</div>
-                        <div class="sub-title">São José dos Pinhais, PR</div>
+                        <div class="sub-title">Campo Grande, MS</div>
                     </div>
                </div>
                <div class="row">
                 <ion-icon name="person-outline"></ion-icon>
                 <div class="info">
                     <div class="head">Email</div>
-                    <div class="sub-title">jcpontes2@gmail.com</div>
+                    <div class="sub-title">aeiou@gmail.com</div>
                 </div>
            </div>
                </div>
@@ -227,7 +248,7 @@
 
     <!--sessão  footer-->
     <footer>
-        <span>Criado por <a href="#">JohnnyPontes</a> | Todos os direitos reservado 2023</span>
+        <span>Criado por <a href="#">Front</a> | Todos os direitos reservado 2021</span>
     </footer>
 
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
