--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <div class="home-content">
                 <div class="text-1">Ola, meu nome é</div>
                 <div class="text-2">Johnny Pontes</div>
-                <div class="text-3">eu sou <span class="typing"></span></div>
+                <div class="text-3">eu sou estudante de <span class="typing"></span></div>
                 <a href="#contact">Contate-me</a>
             </div>
         </div>
@@ -49,7 +49,7 @@
                     <img src="image/img-1.jpg" alt="t">
                 </div>
                 <div class="column right">
-                    <div class="text">Meu nome é Johnny e sou <span class="typing-2"></span></div>
+                    <div class="text">Meu nome é Johnny e sou estudante de <span class="typing-2"></span></div>
                     <p>Sou um estudante de Engenharia de Software na Universidade Unicesumar, apaixonado por programação e tecnologia. Tenho conhecimentos em lógica de programação, HTML5, CSS3, Bancos de dados, Git e metodologias ágeis.
                         Estou sempre buscando aprender e aprimorar minhas habilidades para me tornar um desenvolvedor de software qualificado.</p>
                     <a href="#">Página Inicial</a>
