--- a/index.html
+++ b/index.html
@@ -139,9 +139,9 @@
             <div class="serv-content">
                <div class="card">
                    <div class="box">
-                    <ion-icon name="brush-outline"></ion-icon>
-                    <div class="text">Projeto 1</div>
-                    <p>Em desenvovimento...Aguarde novidades.</p>
+                    <ion-icon name=""></ion-icon>
+                    <a href="JogoDaVelha/JogoDaVelha.html" target="_blank"><div class="text">Jogo da Velha</div></a>
+                    <p>Jogo desenvolvido em JavaScript.</p>
                    </div>
                </div>
 
