--- a/index.html
+++ b/index.html
@@ -108,21 +108,21 @@
                 </div>
                 <div class="bars">
                     <div class="info">
-                        <span>JavaScript</span>
+                        <span>MySQL</span>
                         <span>87%</span>
                     </div>
                     <div class="line js"></div>
                 </div>
                 <div class="bars">
                     <div class="info">
-                        <span>PHP</span>
+                        <span>Java</span>
                         <span>47%</span>
                     </div>
                     <div class="line php"></div>
                 </div>
                 <div class="bars">
                     <div class="info">
-                        <span>MySQL</span>
+                        <span>JavaScript</span>
                         <span>42%</span>
                     </div>
                     <div class="line mysql"></div>
